parser.output
Terminals unused in grammar

   "."
   T_eof


State 38 conflicts: 1 shift/reduce
State 192 conflicts: 1 shift/reduce


Grammar

    0 $accept: module $end

    1 module: declaration_list

    2 declaration_list: declaration declaration_list
    3                 | /* empty */

    4 declaration: const_def
    5            | var_def
    6            | routine
    7            | program

    8 const_def: "const" type T_id "=" const_expr const_def_list ";"

    9 const_def_list: "," T_id "=" const_expr const_def_list
   10               | /* empty */

   11 var_def: type var_init var_def_list ";"

   12 var_def_list: "," var_init var_def_list
   13             | /* empty */

   14 var_init: T_id var_init_if
   15         | T_id var_init_list

   16 var_init_if: "=" expr
   17            | /* empty */

   18 var_init_list: "[" const_expr "]" var_init_list
   19              | "[" const_expr "]"

   20 routine_header: routine_header_choose T_id "(" routine_header_if ")"

   21 routine_header_choose: "PROC"
   22                      | "FUNC" type

   23 routine_header_if: type formal routine_header_if_list
   24                  | /* empty */

   25 routine_header_if_list: "," type formal routine_header_if_list
   26                       | /* empty */

   27 formal: "&" T_id
   28       | T_id
   29       | T_id "[" formal_if2 "]" formal_list

   30 formal_if2: const_expr
   31           | /* empty */

   32 formal_list: "[" const_expr "]" formal_list
   33            | /* empty */

   34 routine: routine_header routine_header_choose

   35 routine_header_choose: ";"
   36                      | block

   37 program_header: "PROGRAM" T_id "(" ")"

   38 program: program_header block

   39 type: "int"
   40     | "bool"
   41     | "char"
   42     | "REAL"

   43 const_expr: expr

   44 expr: T_const_int
   45     | T_const_real
   46     | T_const_char
   47     | T_string
   48     | "true"
   49     | "false"
   50     | "(" expr ")"
   51     | l_value
   52     | call
   53     | "+" expr
   54     | "not" expr
   55     | "!" expr
   56     | "-" expr
   57     | expr "+" expr
   58     | expr "-" expr
   59     | expr "*" expr
   60     | expr "/" expr
   61     | expr "%" expr
   62     | expr "MOD" expr
   63     | expr "==" expr
   64     | expr "!=" expr
   65     | expr "<" expr
   66     | expr ">" expr
   67     | expr "<=" expr
   68     | expr "AND" expr
   69     | expr "and" expr
   70     | expr "OR" expr
   71     | expr "or" expr
   72     | expr ">=" expr

   73 l_value: T_id l_value_list

   74 l_value_list: /* empty */
   75             | l_value_list "[" expr "]"

   76 call: T_id "(" call_if ")"

   77 call_if: expr call_if_list
   78        | /* empty */

   79 call_if_list: "," expr call_if_list
   80             | /* empty */

   81 block: "{" block_list "}"

   82 block_list: local_def block_list
   83           | stmt block_list
   84           | /* empty */

   85 local_def: const_def
   86          | var_def

   87 stmt: ";"
   88     | l_value assign expr ";"
   89     | l_value "++" ";"
   90     | l_value "--" ";"
   91     | call ";"
   92     | "if" "(" expr ")" stmt
   93     | "if" "(" expr ")" stmt "else" stmt
   94     | "while" "(" expr ")" stmt
   95     | "FOR" "(" T_id "," range ")" stmt
   96     | "do" stmt "while" "(" expr ")" ";"
   97     | "switch" "(" expr ")" "{" stmt_list1 "}"
   98     | "switch" "(" expr ")" "{" stmt_list1 "default" ":" clause "}"
   99     | "break" ";"
  100     | "continue" ";"
  101     | "return" expr ";"
  102     | "return" ";"
  103     | block
  104     | write "(" ")" ";"
  105     | write "(" format stmt_if5_list ")" ";"

  106 stmt_list1: stmt_list1 stmt_list1_list clause
  107           | /* empty */

  108 stmt_list1_list: stmt_list1_list "case" const_expr ":"
  109                | "case" const_expr ":"

  110 stmt_if5_list: "," format stmt_if5_list
  111              | /* empty */

  112 assign: "="
  113       | "+="
  114       | "-="
  115       | "*="
  116       | "/="
  117       | "%="

  118 range: expr range_choose expr range_if

  119 range_choose: "TO"
  120             | "DOWNTO"

  121 range_if: "STEP" expr
  122         | /* empty */

  123 clause: clause_list "break" ";"
  124       | clause_list "NEXT" ";"

  125 clause_list: clause_list stmt
  126            | /* empty */

  127 write: "WRITE"
  128      | "WRITELN"
  129      | "WRITESP"
  130      | "WRITESPLN"

  131 format: expr
  132       | "FORM" "(" expr "," expr format_if "("

  133 format_if: "," expr
  134          | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
"bool" (258) 40
"and" (259) 69
"break" (260) 99 123
"case" (261) 108 109
"char" (262) 41
"const" (263) 8
"continue" (264) 100
"default" (265) 98
"do" (266) 96
"DOWNTO" (267) 120
"else" (268) 93
"false" (269) 49
"FOR" (270) 95
"FORM" (271) 132
"FUNC" (272) 22
"if" (273) 92 93
"int" (274) 39
"MOD" (275) 62
"NEXT" (276) 124
"not" (277) 54
"or" (278) 71
"PROC" (279) 21
"PROGRAM" (280) 37
"REAL" (281) 42
"return" (282) 101 102
"STEP" (283) 121
"switch" (284) 97 98
"TO" (285) 119
"true" (286) 48
"while" (287) 94 96
"WRITE" (288) 127
"WRITELN" (289) 128
"WRITESP" (290) 129
"WRITESPLN" (291) 130
T_const_int (292) 44
T_const_real (293) 45
T_id (294) 8 9 14 15 20 27 28 29 37 73 76 95
T_const_char (295) 46
T_string (296) 47
"==" (297) 63
">" (298) 66
"<" (299) 65
"!=" (300) 64
">=" (301) 72
"<=" (302) 67
"+" (303) 53 57
"-" (304) 56 58
"*" (305) 59
"/" (306) 60
"%" (307) 61
"!" (308) 55
"AND" (309) 68
"OR" (310) 70
"++" (311) 89
"--" (312) 90
"=" (313) 8 9 16 112
"+=" (314) 113
"-=" (315) 114
"*=" (316) 115
"/=" (317) 116
"%=" (318) 117
"&" (319) 27
";" (320) 8 11 35 87 88 89 90 91 96 99 100 101 102 104 105 123 124
"." (321)
"(" (322) 20 37 50 76 92 93 94 95 96 97 98 104 105 132
")" (323) 20 37 50 76 92 93 94 95 96 97 98 104 105
":" (324) 98 108 109
"," (325) 9 12 25 79 95 110 132 133
"[" (326) 18 19 29 32 75
"]" (327) 18 19 29 32 75
"{" (328) 81 97 98
"}" (329) 81 97 98
T_eof (330)


Nonterminals, with rules where they appear

$accept (76)
    on left: 0
module (77)
    on left: 1, on right: 0
declaration_list (78)
    on left: 2 3, on right: 1 2
declaration (79)
    on left: 4 5 6 7, on right: 2
const_def (80)
    on left: 8, on right: 4 85
const_def_list (81)
    on left: 9 10, on right: 8 9
var_def (82)
    on left: 11, on right: 5 86
var_def_list (83)
    on left: 12 13, on right: 11 12
var_init (84)
    on left: 14 15, on right: 11 12
var_init_if (85)
    on left: 16 17, on right: 14
var_init_list (86)
    on left: 18 19, on right: 15 18
routine_header (87)
    on left: 20, on right: 34
routine_header_choose (88)
    on left: 21 22 35 36, on right: 20 34
routine_header_if (89)
    on left: 23 24, on right: 20
routine_header_if_list (90)
    on left: 25 26, on right: 23 25
formal (91)
    on left: 27 28 29, on right: 23 25
formal_if2 (92)
    on left: 30 31, on right: 29
formal_list (93)
    on left: 32 33, on right: 29 32
routine (94)
    on left: 34, on right: 6
program_header (95)
    on left: 37, on right: 38
program (96)
    on left: 38, on right: 7
type (97)
    on left: 39 40 41 42, on right: 8 11 22 23 25
const_expr (98)
    on left: 43, on right: 8 9 18 19 30 32 108 109
expr (99)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72, on right: 16 43 50 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 75 77 79 88 92
    93 94 96 97 98 101 118 121 131 132 133
l_value (100)
    on left: 73, on right: 51 88 89 90
l_value_list (101)
    on left: 74 75, on right: 73 75
call (102)
    on left: 76, on right: 52 91
call_if (103)
    on left: 77 78, on right: 76
call_if_list (104)
    on left: 79 80, on right: 77 79
block (105)
    on left: 81, on right: 36 38 103
block_list (106)
    on left: 82 83 84, on right: 81 82 83
local_def (107)
    on left: 85 86, on right: 82
stmt (108)
    on left: 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105, on right: 83 92 93 94 95 96 125
stmt_list1 (109)
    on left: 106 107, on right: 97 98 106
stmt_list1_list (110)
    on left: 108 109, on right: 106 108
stmt_if5_list (111)
    on left: 110 111, on right: 105 110
assign (112)
    on left: 112 113 114 115 116 117, on right: 88
range (113)
    on left: 118, on right: 95
range_choose (114)
    on left: 119 120, on right: 118
range_if (115)
    on left: 121 122, on right: 118
clause (116)
    on left: 123 124, on right: 98 106
clause_list (117)
    on left: 125 126, on right: 123 124 125
write (118)
    on left: 127 128 129 130, on right: 104 105
format (119)
    on left: 131 132, on right: 105 110
format_if (120)
    on left: 133 134, on right: 132


state 0

    0 $accept: . module $end

    "bool"     shift, and go to state 1
    "char"     shift, and go to state 2
    "const"    shift, and go to state 3
    "FUNC"     shift, and go to state 4
    "int"      shift, and go to state 5
    "PROC"     shift, and go to state 6
    "PROGRAM"  shift, and go to state 7
    "REAL"     shift, and go to state 8
    ";"        shift, and go to state 9
    "{"        shift, and go to state 10

    $default  reduce using rule 3 (declaration_list)

    module                 go to state 11
    declaration_list       go to state 12
    declaration            go to state 13
    const_def              go to state 14
    var_def                go to state 15
    routine_header         go to state 16
    routine_header_choose  go to state 17
    routine                go to state 18
    program_header         go to state 19
    program                go to state 20
    type                   go to state 21
    block                  go to state 22


state 1

   40 type: "bool" .

    $default  reduce using rule 40 (type)


state 2

   41 type: "char" .

    $default  reduce using rule 41 (type)


state 3

    8 const_def: "const" . type T_id "=" const_expr const_def_list ";"

    "bool"  shift, and go to state 1
    "char"  shift, and go to state 2
    "int"   shift, and go to state 5
    "REAL"  shift, and go to state 8

    type  go to state 23


state 4

   22 routine_header_choose: "FUNC" . type

    "bool"  shift, and go to state 1
    "char"  shift, and go to state 2
    "int"   shift, and go to state 5
    "REAL"  shift, and go to state 8

    type  go to state 24


state 5

   39 type: "int" .

    $default  reduce using rule 39 (type)


state 6

   21 routine_header_choose: "PROC" .

    $default  reduce using rule 21 (routine_header_choose)


state 7

   37 program_header: "PROGRAM" . T_id "(" ")"

    T_id  shift, and go to state 25


state 8

   42 type: "REAL" .

    $default  reduce using rule 42 (type)


state 9

   35 routine_header_choose: ";" .

    $default  reduce using rule 35 (routine_header_choose)


state 10

   81 block: "{" . block_list "}"

    "bool"       shift, and go to state 1
    "break"      shift, and go to state 26
    "char"       shift, and go to state 2
    "const"      shift, and go to state 3
    "continue"   shift, and go to state 27
    "do"         shift, and go to state 28
    "FOR"        shift, and go to state 29
    "if"         shift, and go to state 30
    "int"        shift, and go to state 5
    "REAL"       shift, and go to state 8
    "return"     shift, and go to state 31
    "switch"     shift, and go to state 32
    "while"      shift, and go to state 33
    "WRITE"      shift, and go to state 34
    "WRITELN"    shift, and go to state 35
    "WRITESP"    shift, and go to state 36
    "WRITESPLN"  shift, and go to state 37
    T_id         shift, and go to state 38
    ";"          shift, and go to state 39
    "{"          shift, and go to state 10

    $default  reduce using rule 84 (block_list)

    const_def   go to state 40
    var_def     go to state 41
    type        go to state 21
    l_value     go to state 42
    call        go to state 43
    block       go to state 44
    block_list  go to state 45
    local_def   go to state 46
    stmt        go to state 47
    write       go to state 48


state 11

    0 $accept: module . $end

    $end  shift, and go to state 49


state 12

    1 module: declaration_list .

    $default  reduce using rule 1 (module)


state 13

    2 declaration_list: declaration . declaration_list

    "bool"     shift, and go to state 1
    "char"     shift, and go to state 2
    "const"    shift, and go to state 3
    "FUNC"     shift, and go to state 4
    "int"      shift, and go to state 5
    "PROC"     shift, and go to state 6
    "PROGRAM"  shift, and go to state 7
    "REAL"     shift, and go to state 8
    ";"        shift, and go to state 9
    "{"        shift, and go to state 10

    $default  reduce using rule 3 (declaration_list)

    declaration_list       go to state 50
    declaration            go to state 13
    const_def              go to state 14
    var_def                go to state 15
    routine_header         go to state 16
    routine_header_choose  go to state 17
    routine                go to state 18
    program_header         go to state 19
    program                go to state 20
    type                   go to state 21
    block                  go to state 22


state 14

    4 declaration: const_def .

    $default  reduce using rule 4 (declaration)


state 15

    5 declaration: var_def .

    $default  reduce using rule 5 (declaration)


state 16

   34 routine: routine_header . routine_header_choose

    "FUNC"  shift, and go to state 4
    "PROC"  shift, and go to state 6
    ";"     shift, and go to state 9
    "{"     shift, and go to state 10

    routine_header_choose  go to state 51
    block                  go to state 22


state 17

   20 routine_header: routine_header_choose . T_id "(" routine_header_if ")"

    T_id  shift, and go to state 52


state 18

    6 declaration: routine .

    $default  reduce using rule 6 (declaration)


state 19

   38 program: program_header . block

    "{"  shift, and go to state 10

    block  go to state 53


state 20

    7 declaration: program .

    $default  reduce using rule 7 (declaration)


state 21

   11 var_def: type . var_init var_def_list ";"

    T_id  shift, and go to state 54

    var_init  go to state 55


state 22

   36 routine_header_choose: block .

    $default  reduce using rule 36 (routine_header_choose)


state 23

    8 const_def: "const" type . T_id "=" const_expr const_def_list ";"

    T_id  shift, and go to state 56


state 24

   22 routine_header_choose: "FUNC" type .

    $default  reduce using rule 22 (routine_header_choose)


state 25

   37 program_header: "PROGRAM" T_id . "(" ")"

    "("  shift, and go to state 57


state 26

   99 stmt: "break" . ";"

    ";"  shift, and go to state 58


state 27

  100 stmt: "continue" . ";"

    ";"  shift, and go to state 59


state 28

   96 stmt: "do" . stmt "while" "(" expr ")" ";"

    "break"      shift, and go to state 26
    "continue"   shift, and go to state 27
    "do"         shift, and go to state 28
    "FOR"        shift, and go to state 29
    "if"         shift, and go to state 30
    "return"     shift, and go to state 31
    "switch"     shift, and go to state 32
    "while"      shift, and go to state 33
    "WRITE"      shift, and go to state 34
    "WRITELN"    shift, and go to state 35
    "WRITESP"    shift, and go to state 36
    "WRITESPLN"  shift, and go to state 37
    T_id         shift, and go to state 38
    ";"          shift, and go to state 39
    "{"          shift, and go to state 10

    l_value  go to state 42
    call     go to state 43
    block    go to state 44
    stmt     go to state 60
    write    go to state 48


state 29

   95 stmt: "FOR" . "(" T_id "," range ")" stmt

    "("  shift, and go to state 61


state 30

   92 stmt: "if" . "(" expr ")" stmt
   93     | "if" . "(" expr ")" stmt "else" stmt

    "("  shift, and go to state 62


state 31

  101 stmt: "return" . expr ";"
  102     | "return" . ";"

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    ";"           shift, and go to state 73
    "("           shift, and go to state 74

    expr     go to state 75
    l_value  go to state 76
    call     go to state 77


state 32

   97 stmt: "switch" . "(" expr ")" "{" stmt_list1 "}"
   98     | "switch" . "(" expr ")" "{" stmt_list1 "default" ":" clause "}"

    "("  shift, and go to state 78


state 33

   94 stmt: "while" . "(" expr ")" stmt

    "("  shift, and go to state 79


state 34

  127 write: "WRITE" .

    $default  reduce using rule 127 (write)


state 35

  128 write: "WRITELN" .

    $default  reduce using rule 128 (write)


state 36

  129 write: "WRITESP" .

    $default  reduce using rule 129 (write)


state 37

  130 write: "WRITESPLN" .

    $default  reduce using rule 130 (write)


state 38

   73 l_value: T_id . l_value_list
   76 call: T_id . "(" call_if ")"

    "("  shift, and go to state 80

    "("       [reduce using rule 74 (l_value_list)]
    $default  reduce using rule 74 (l_value_list)

    l_value_list  go to state 81


state 39

   87 stmt: ";" .

    $default  reduce using rule 87 (stmt)


state 40

   85 local_def: const_def .

    $default  reduce using rule 85 (local_def)


state 41

   86 local_def: var_def .

    $default  reduce using rule 86 (local_def)


state 42

   88 stmt: l_value . assign expr ";"
   89     | l_value . "++" ";"
   90     | l_value . "--" ";"

    "++"  shift, and go to state 82
    "--"  shift, and go to state 83
    "="   shift, and go to state 84
    "+="  shift, and go to state 85
    "-="  shift, and go to state 86
    "*="  shift, and go to state 87
    "/="  shift, and go to state 88
    "%="  shift, and go to state 89

    assign  go to state 90


state 43

   91 stmt: call . ";"

    ";"  shift, and go to state 91


state 44

  103 stmt: block .

    $default  reduce using rule 103 (stmt)


state 45

   81 block: "{" block_list . "}"

    "}"  shift, and go to state 92


state 46

   82 block_list: local_def . block_list

    "bool"       shift, and go to state 1
    "break"      shift, and go to state 26
    "char"       shift, and go to state 2
    "const"      shift, and go to state 3
    "continue"   shift, and go to state 27
    "do"         shift, and go to state 28
    "FOR"        shift, and go to state 29
    "if"         shift, and go to state 30
    "int"        shift, and go to state 5
    "REAL"       shift, and go to state 8
    "return"     shift, and go to state 31
    "switch"     shift, and go to state 32
    "while"      shift, and go to state 33
    "WRITE"      shift, and go to state 34
    "WRITELN"    shift, and go to state 35
    "WRITESP"    shift, and go to state 36
    "WRITESPLN"  shift, and go to state 37
    T_id         shift, and go to state 38
    ";"          shift, and go to state 39
    "{"          shift, and go to state 10

    $default  reduce using rule 84 (block_list)

    const_def   go to state 40
    var_def     go to state 41
    type        go to state 21
    l_value     go to state 42
    call        go to state 43
    block       go to state 44
    block_list  go to state 93
    local_def   go to state 46
    stmt        go to state 47
    write       go to state 48


state 47

   83 block_list: stmt . block_list

    "bool"       shift, and go to state 1
    "break"      shift, and go to state 26
    "char"       shift, and go to state 2
    "const"      shift, and go to state 3
    "continue"   shift, and go to state 27
    "do"         shift, and go to state 28
    "FOR"        shift, and go to state 29
    "if"         shift, and go to state 30
    "int"        shift, and go to state 5
    "REAL"       shift, and go to state 8
    "return"     shift, and go to state 31
    "switch"     shift, and go to state 32
    "while"      shift, and go to state 33
    "WRITE"      shift, and go to state 34
    "WRITELN"    shift, and go to state 35
    "WRITESP"    shift, and go to state 36
    "WRITESPLN"  shift, and go to state 37
    T_id         shift, and go to state 38
    ";"          shift, and go to state 39
    "{"          shift, and go to state 10

    $default  reduce using rule 84 (block_list)

    const_def   go to state 40
    var_def     go to state 41
    type        go to state 21
    l_value     go to state 42
    call        go to state 43
    block       go to state 44
    block_list  go to state 94
    local_def   go to state 46
    stmt        go to state 47
    write       go to state 48


state 48

  104 stmt: write . "(" ")" ";"
  105     | write . "(" format stmt_if5_list ")" ";"

    "("  shift, and go to state 95


state 49

    0 $accept: module $end .

    $default  accept


state 50

    2 declaration_list: declaration declaration_list .

    $default  reduce using rule 2 (declaration_list)


state 51

   34 routine: routine_header routine_header_choose .

    $default  reduce using rule 34 (routine)


state 52

   20 routine_header: routine_header_choose T_id . "(" routine_header_if ")"

    "("  shift, and go to state 96


state 53

   38 program: program_header block .

    $default  reduce using rule 38 (program)


state 54

   14 var_init: T_id . var_init_if
   15         | T_id . var_init_list

    "="  shift, and go to state 97
    "["  shift, and go to state 98

    $default  reduce using rule 17 (var_init_if)

    var_init_if    go to state 99
    var_init_list  go to state 100


state 55

   11 var_def: type var_init . var_def_list ";"

    ","  shift, and go to state 101

    $default  reduce using rule 13 (var_def_list)

    var_def_list  go to state 102


state 56

    8 const_def: "const" type T_id . "=" const_expr const_def_list ";"

    "="  shift, and go to state 103


state 57

   37 program_header: "PROGRAM" T_id "(" . ")"

    ")"  shift, and go to state 104


state 58

   99 stmt: "break" ";" .

    $default  reduce using rule 99 (stmt)


state 59

  100 stmt: "continue" ";" .

    $default  reduce using rule 100 (stmt)


state 60

   96 stmt: "do" stmt . "while" "(" expr ")" ";"

    "while"  shift, and go to state 105


state 61

   95 stmt: "FOR" "(" . T_id "," range ")" stmt

    T_id  shift, and go to state 106


state 62

   92 stmt: "if" "(" . expr ")" stmt
   93     | "if" "(" . expr ")" stmt "else" stmt

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    "("           shift, and go to state 74

    expr     go to state 107
    l_value  go to state 76
    call     go to state 77


state 63

   49 expr: "false" .

    $default  reduce using rule 49 (expr)


state 64

   54 expr: "not" . expr

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    "("           shift, and go to state 74

    expr     go to state 108
    l_value  go to state 76
    call     go to state 77


state 65

   48 expr: "true" .

    $default  reduce using rule 48 (expr)


state 66

   44 expr: T_const_int .

    $default  reduce using rule 44 (expr)


state 67

   45 expr: T_const_real .

    $default  reduce using rule 45 (expr)


state 68

   46 expr: T_const_char .

    $default  reduce using rule 46 (expr)


state 69

   47 expr: T_string .

    $default  reduce using rule 47 (expr)


state 70

   53 expr: "+" . expr

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    "("           shift, and go to state 74

    expr     go to state 109
    l_value  go to state 76
    call     go to state 77


state 71

   56 expr: "-" . expr

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    "("           shift, and go to state 74

    expr     go to state 110
    l_value  go to state 76
    call     go to state 77


state 72

   55 expr: "!" . expr

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    "("           shift, and go to state 74

    expr     go to state 111
    l_value  go to state 76
    call     go to state 77


state 73

  102 stmt: "return" ";" .

    $default  reduce using rule 102 (stmt)


state 74

   50 expr: "(" . expr ")"

    "false"       shift, and go to state 63
    "not"         shift, and go to state 64
    "true"        shift, and go to state 65
    T_const_int   shift, and go to state 66
    T_const_real  shift, and go to state 67
    T_id          shift, and go to state 38
    T_const_char  shift, and go to state 68
    T_string      shift, and go to state 69
    "+"           shift, and go to state 70
    "-"           shift, and go to state 71
    "!"           shift, and go to state 72
    "("           shift, and go to state 74

    expr     go to state 112
    l_value  go to state 76
    call     go to state 77


state 75
